# cyberlog

./: .gitignore  Cargo.toml  README.md  build
src/: cli.rs  db.rs  journal.rs  main.rs
