[package]
name = "cyberlog"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
rusqlite = { version = "0.30", features = ["bundled"] }
chrono = "0.4"
prettytable = { version = "0.10", features = ["csv"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes = "0.7"
block-modes = "0.8"
block-padding = "0.2"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"


# add crates here

# ---------------------------------------------------------------------
#  Fast edit–compile–run cycle
# ---------------------------------------------------------------------
[profile.dev]
opt-level       = 0
incremental     = true
codegen-units   = 256
debug           = 1
lto             = false
panic           = "abort"
overflow-checks = false
strip           = "debuginfo"

[profile.dev.build-override]
opt-level = 3

# ---------------------------------------------------------------------
#  Fast *rebuilds* while still shipping optimised code
# ---------------------------------------------------------------------
[profile.release]
opt-level       = 3
incremental     = true
codegen-units   = 16
lto             = "thin"
strip           = "symbols"

[profile.release.package."*"]      # dependencies: quick build
opt-level     = 1
codegen-units = 256